static/style.css
/* Reset */

html, body, hgroup, h1, h2, h3, p, li, nav, header, ul, hr, footer, aside, iframe {
    padding: 0;
    margin: 0;
    font-size: 100%;
    font-weight: normal;
    font-family: sans;
}

/* Styles */

html {
    background-image: url("steampunk1.jpg");
    background-size: cover;
    background-position: 0 200px;
    background-attachment: fixed;
}

.title {
    box-sizing: border-box;
    padding-top: 24px;
    padding-left: 120px;
    min-height: 128px;

    background: url("icon.png") no-repeat;
}

h1 {
    font-size: 2.8em;
    line-height: 1em;
}
h2 {
    font-size: 1.3em;
}

.title h1, .title h2 {
    font-family: "DejaVu Serif", "Noto Serif", serif;
}

nav {
    padding-left: 20px;

    border-width: 0 0 1px 0;
    border-style: solid;
    border-color: #541014;
}

nav a  {
    padding: 5px 5px 6px 5px;

    background-color: rgba(102, 20, 24, .2);

    text-decoration: none;
    color: #111;
    font: 1.2em Ubuntu, helvetica, sans-serif;

    border-width: 1px 1px 0 1px;
    border-style: solid;
    border-color: #54181b;

    display: inline-block;
}
nav a.current, nav a:hover {
    background-color: #661418;
    color: #fff;
}

.columns {
    display: flex;
    flex-flow: row wrap;

    background-color: #fff;
}

.columns h2 {
    margin: 2px 5px 10px 5px;
}

main {
    flex: 10 10;
    order: 1;

    padding: 8px;

    border-width: 0 1px;
    border-style: solid;
    border-color: #54181b;
}

main h3 {
    margin-top: 15px;
    font-weight: bold;
}

main a:link, main a:visited {
    color: #661418;
}

main a:hover {
    color: #145466;
}

main a[href*="manaplus.org"] {
    margin-left: 2px;
    padding-left: 1.5em;

    background: url("manaplus.png") no-repeat;
    background-size: contain;
}

main a[href*="themanaworld.org"] {
    margin-left: 1.9px;
    padding-left: 1.45em;

    background: url("tmw.png") no-repeat;
    background-size: contain;
}

main a.dark-button {
    display: inline-block;
    padding: 6px;

    border: 2px solid #300d0e;
    border-radius: 5px;

    background-color: #4c0f12;
    background-image: linear-gradient(#4c0f12, #661418);

    text-decoration: none;
    color: #f0f0f0;
    font-size: 1.3em;
}

main a.dark-button:hover {
    background: #661418;
}

ul {
    list-style: disc;
    margin-left: 2em;
}

.gallery main {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.gallery-img {
}

.sidebar {
    padding: 8px;
}

.news {
    flex: 5 5;
    order: 0;
}

.news h3 {
    margin-top: .5em;
}

.quote {
    text-indent: 20px;
}

.author:before {
    content: "— "
}
.author {
    margin-top: .5em;
    text-indent: 20px;
}

.online {
    flex: 4 4;
    order: 2;
}

.online ul {
    list-style: none;
}

footer {
    border-width: 1px 0 0 0;
    border-style: solid;
    border-color: #54181b;
}

@media screen and (max-width: 70em) {
    .columns {
        flex-direction: column;
    }

    main {
        order: 0;

        border-width: 0;
    }

    .news {
        order: 1;

        border-width: 1px 0;
        border-style: solid;
        border-color: #54181b;
    }

    .online {
        order: 2;
    }

    .irc .sidebar {
        display: none;
    }
}

